# homelab-functions

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: container.yml
docs/: architecture.md
homelab/: __init__.py  action_recorder.py  client.py  home_assistant.py  notification_actions.py  notification_ledger.py  server.py
tests/: test_client.py  test_home_assistant.py  test_notification_actions.py  test_server.py  test_workflow_reports.py
