[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-functions"
version = "0.1.0"
description = "Local broker and helper package for common homelab functions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9,<4",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[project.scripts]
homelab-functions = "homelab.server:main"

[tool.setuptools.packages.find]
include = ["homelab*"]
